added num_threads